updating input files

--- a/Bedford_Greene_SD_tutorial.ipynb
+++ b/Bedford_Greene_SD_tutorial.ipynb
@@ -98,12 +98,12 @@
     "import seaborn as sns\n",
     "\n",
     "# load DU factors\n",
-    "rdm_factors = np.loadtxt('input_data/DU_Factors.csv', delimiter= ',')\n",
+    "rdm_factors = np.loadtxt('DU_Factors.csv', delimiter= ',')\n",
     "\n",
     "# import the objective data across 1000 SOWs for three time periods\n",
-    "short_term_performance = np.loadtxt('input_data/Short_term_performance.csv', delimiter= ',')\n",
-    "mid_term_performance = np.loadtxt('input_data/Mid_term_performance.csv', delimiter = ',')\n",
-    "long_term_performance = np.loadtxt('input_data/Long_term_performance.csv', delimiter = ',')\n",
+    "short_term_performance = np.loadtxt('Short_term_performance.csv', delimiter= ',')\n",
+    "mid_term_performance = np.loadtxt('Mid_term_performance.csv', delimiter = ',')\n",
+    "long_term_performance = np.loadtxt('Long_term_performance.csv', delimiter = ',')\n",
     "\n",
     "satisficing_criteria = [.98, .2, .8, .1, 5]\n",
     "\n",
