--- a/Bedford_Greene_SD_tutorial.ipynb
+++ b/Bedford_Greene_SD_tutorial.ipynb
@@ -516,15 +516,15 @@
    ],
    "source": [
     "# specify the utility (\"Bedford\" or \"Greene\")\n",
-    "utility = \"Bedford\"\n",
+    "utility =\n",
     "\n",
     "# specify which performance objectives to investigate (note that not all performance objectives have failures, which may result in a blank factor map)\n",
     "# set this to one of the following: \"Reliability\", \"Restriction Frequency\", \"Peak Financial Cost\", \"Worst Case Cost\" or \"Unit Cost\"\n",
-    "objective = \"WCC\"\n",
+    "objective =\n",
     "\n",
     "# select uncertainties from the following list: 'D1', 'D2', 'D3', 'BT', 'BM', 'DR', 'RE', 'EV', 'PM', 'CT', 'IA', 'IF', 'IP'\n",
-    "uncertainty_1= \"D1\"\n",
-    "uncertainty_2 = \"D2\"\n",
+    "uncertainty_1=\n",
+    "uncertainty_2 =\n",
     "\n",
     "# The code below will plot factor maps over the three planning horizons for the information above\n",
     "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(9,3))\n",
